<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/home"
        android:iconTint="@color/navy_black"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_files"
        android:icon="@drawable/home"
        android:iconTint="@color/navy_black"
        android:title="@string/files" />

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/qr_code_ic"
        android:iconTint="@color/navy_black"
        android:title="@string/your_qr" />

    <item
        android:id="@+id/navigation_lectures"
        android:icon="@drawable/settings_checked"
        android:iconTint="@color/navy_black"
        android:title="@string/title_lectures" />

    <item
        android:id="@+id/navigation_announcements"
        android:icon="@drawable/settings_checked"
        android:iconTint="@color/navy_black"
        android:title="@string/title_announcements" />

</menu>