<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/notebook_1_svgrepo_com"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/navy_black" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:fontFamily="@font/nexa_hand"
        android:text=""
        android:textAllCaps="true"
        android:textColor="@color/navy_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="start"
            android:paddingStart="20dp"
            android:text="@string/txt_enter_username"
            android:textColor="@color/navy_black"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/cv_mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_border_grey_">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/txt_username"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"
                    android:textColor="@color/navy_black"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="start"
            android:paddingStart="20dp"
            android:text="@string/txt_enter_password"
            android:textColor="@color/navy_black"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_border_grey_">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"
                    android:textColor="@color/navy_black"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/signInSignUpCard"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="0dp"
            android:paddingHorizontal="20dp"
            app:cardBackgroundColor="@color/indigo_blue"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/lato_regular"
                    android:paddingHorizontal="20dp"
                    android:text="Sign in/Sign up"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>